add: websocket connetion on frontend & backend; cookies JWT token; logging; update: frontend message logic
