# backend/internal/api/auth_controller.go
@@ -3,6 +3,7 @@ package api
 
 import (
 	_ "chater/internal/domain/auth"
+	"chater/internal/logging"
 	"chater/internal/service"
 	"net/http"
 
@@ -30,8 +31,10 @@ func NewAuthController(authService *service.AuthService) *AuthController {
 // @Failure 409 {object} errorResponse
 // @Router /api/v1/auth/register [post]
 func (h *AuthController) Register(c *gin.Context) {
+	logging.Logger.Info("Register request")
 	var req registerRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
+		logging.Logger.Error(err.Error())
 		c.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
 		return
 	}
@@ -39,15 +42,18 @@ func (h *AuthController) Register(c *gin.Context) {
 	err := h.authService.Register(c.Request.Context(), req.Username, req.Email, req.Password)
 	if err != nil {
 		if err.Error() == "user email already exists" {
+			logging.Logger.Info("User email already exists")
 			c.JSON(http.StatusConflict, errorResponse{Error: "User email already exists"})
 			return
 		} else {
+			logging.Logger.Error(err.Error())
 			c.JSON(http.StatusInternalServerError, errorResponse{Error: "Failed to register user"})
 			return
 		}
 	}
 
 	c.JSON(http.StatusCreated, successResponse{Message: "User registered successfully"})
+	logging.Logger.Info("User registered successfully")
 }
 
 // Login godoc
@@ -57,24 +63,29 @@ func (h *AuthController) Register(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param credentials body loginRequest true "User Credentials"
-// @Success 200 {object} tokenResponse
+// @Success 200 {object} successResponse
 // @Failure 400 {object} errorResponse
 // @Failure 401 {object} errorResponse
 // @Router /api/v1/auth/login [post]
 func (h *AuthController) Login(c *gin.Context) {
+	logging.Logger.Info("Login request")
 	var req loginRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
+		logging.Logger.Error(err.Error())
 		c.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
 		return
 	}
 
 	token, err := h.authService.Login(c.Request.Context(), req.Username, req.Password)
 	if err != nil {
+		logging.Logger.Info("Invalid username or password")
 		c.JSON(http.StatusUnauthorized, errorResponse{Error: "Invalid username or password"})
 		return
 	}
 
-	c.SetCookie("token", token, 3600*24, "/", "localhost", false, true)
+	logging.Logger.Debug(token)
+	c.SetCookie("token", token, 3600*24, "/", "", false, true)
 
-	c.JSON(http.StatusOK, successResponse{Message: "Logged in"})
+	c.JSON(http.StatusOK, successResponse{Message: "Loggin success"})
+	logging.Logger.Info("Loggin success")
 }
